Fix columns menu non scrolling (overflow) issue
MFW-585 #code-completed

--- a/src/sass/mfw-all.scss
+++ b/src/sass/mfw-all.scss
@@ -1085,3 +1085,10 @@ hr {
 .x-field.x-required > .x-label-el:after {
     font-family: sans-serif;
 }
+
+.x-menu {
+    max-height: 500px;
+    .x-menu-body-el {
+        overflow-y: auto;
+    }
+}
